--- a/a.html
+++ b/a.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
         <link rel="stylesheet" href="css/sk.css">
         <link rel="stylesheet" href="css/indexjs.css">
+        <link rel="stylesheet" href="css/heder.css">
+        <link rel="stylesheet" href="css/footer.css">
 
     </head>
 
