--- a/food.html
+++ b/food.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>宇宙の魔法の料理</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="css/food.css">
+    <link rel="stylesheet" href="css/heder.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-WIe1FSYOeE/22RPP6VZEZ41B4B9vN8LeHU/9L6Qr2wPfO1x9+dG/v2rc52ex5SPmSKsSCGj4nBYOQXjGKj4R4Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
