--- a/movie.html
+++ b/movie.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/movie.css">
+    <link rel="stylesheet" href="css/heder.css">
+    <link rel="stylesheet" href="css/footer.css">
+
 </head>
 <body class="main-hobby">
     <header class="page-header">
@@ -22,7 +25,7 @@
         </nav>
     </header>
 
-    <h2 class="myf">My Favorite Things</h2>
+    <h2 class="myf">My Favorite movie</h2>
     <div id="like" class="like">
         <div class="about">
             <h2 class="movie-h2">Netflix Series</h2>
@@ -33,49 +36,42 @@
                             <img class="imgone" src="image/mm/bs.PNG" alt="">
                         </a>
                         <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/top.PNG" data-img-alt="トップボーイ">
-                            <img class="imgone" src="image/mm/ab.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/top.PNG" data-img-alt="『トップボーイ』の舞台はロンドンの裏社会。 主人公ダシェンとサリーを中心にした若者たちが、犯罪に手を染めながらも生き残ろうと葛藤し、友情と裏切りが交差する中で自身の運命と向き合っていく姿が描かれる">
+                            <img class="imgone" src="image/mm/top.PNG" alt="">
                         </a>
                         <h2 class="movie-name">トップボーイ</h2>
-                        <p class="movie-di"><br>イギリスのギャングロードマンの話</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/ab.PNG" data-img-alt="アウターバングス">
                             <img class="imgone" src="image/mm/ab.PNG" alt="">
                         </a>
                         <h2 class="movie-name">アウターバングス</h2>
-                        <p class="movie-di"><br>村の序列の最下層にいる子供たちが宝探しをするストーリー</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/sk.PNG" data-img-alt="aaa">
                             <img class="imgone" src="image/mm/sk.PNG" alt="">
                         </a>
                         <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di"><br>aaaaaaaaaaa</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/st.PNG" data-img-alt="ストレンジャーシングス">
+                        <a href="#" class="open-modal" data-img-src="image/mm/st.PNG" data-img-alt="姿を消した少年、人目を忍び行われる数々の実験、破壊的な超常現象、突然現れた少女。 すべての不可解な謎をつなぐのは、小さな町に隠された恐ろしい秘密。 完﻿全見﻿放﻿題﻿。 80年代のSF・ホラー映画へのオマージュ満載で描いた本作は、3度のドラマ部門作品賞ノミネートなど、数十のエミー賞候補歴を持つ。">
                             <img class="imgone" src="image/mm/st.PNG" alt="">
                         </a>
                         <h2 class="movie-name">ストレンジャーシングス</h2>
-                        <p class="movie-di"><br>地球外生命隊とのバトルストーリー</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/amb.PNG" data-img-alt="アンブレラーアカデミー">
+                        <a href="#" class="open-modal" data-img-src="image/mm/amb.PNG" data-img-alt="スーパーヒーローとして育てられたが疎遠になってしまった兄弟姉妹が、養父の死をきっかけに再会。 そこで彼らに知らされたのは衝撃的な家族の秘密と、人類に迫りくる危機だった。">
                             <img class="imgone" src="image/mm/amb.PNG" alt="">
                         </a>
                         <h2 class="movie-name">アンブレラーアカデミー</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/sam.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/sam.PNG" data-img-alt="ニューヨークの名門校を２度も退学になった問題児サマーは色々あってオーストラリアの小さな町ショアヘイブンにやってきた。サマーを預かることになった幼馴染のアリがいるギブソン家。ショアヘイブンは街をおこしてサーフィン熱があり、アリを筆頭にそこで出会う同世代のサーファーたちとの物語。">
                             <img class="imgone" src="image/mm/sam.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">カオスなサマー</h2>
                     </div>
                 </div>
             </div>
@@ -88,32 +84,29 @@
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/abt.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/abt.PNG" data-img-alt="アルファ・ケンタウリ系惑星ポリフェマス最大の衛星パンドラを舞台にした壮大な戦いに焦点を当てている。パンドラでは、人間の入植者とパンドラの原住民であるナヴィが、地球の資源とナヴィの存続をめぐって戦争を繰り広げる。この映画のタイトルは、映画の登場人物たちが原住民と交流するために使用した、人造ナヴィを指している。">
                             <img class="imgone" src="image/mm/abt.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">アバター</h2>
+                        <p class="movie-di"></p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/sn.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/sn.PNG" data-img-alt="2003年。ハーバード大学に通う天才プログラマーのマーク・ザッカーバーグは、失恋の腹いせに学内のサーバーに侵入し、女子学生の写真を掲載した人気投票サイトを作る。次に彼は、親友と共にハーバード生が使うSNSサイトを構築。登録者を瞬く間に獲得していき、規模を拡大させていく。">
                             <img class="imgone" src="image/mm/sn.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">ソーシャルネットワーク</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/stj.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/stj.PNG" data-img-alt="アップル社の共同設立者でデジタルテクノロジーの常識を変えた男、スティーブ・ジョブズ。彼とその家族、関係者への約3年にわたるインタビューなどを基に、ベストセラーとなった記録本を原案に、ジョブズの半生を描く人間ドラマ。鬼才ダニー・ボイルが監督を務め、ジョブズをマイケル・ファスベンダーが演じる。">
                             <img class="imgone" src="image/mm/stj.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">スティーブジョブズ</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/red.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/red.PNG" data-img-alt="自らの姿をアバターに変え、さまざまな理想を叶えることのできるVRの世界「オアシス」。その創設者の死後、オアシスの3つの謎を解いた者に莫大な財産とその仮想世界を譲るという遺言が発表される。そして全世界を巻き込む争奪戦に、17歳の少年が挑む。">
                             <img class="imgone" src="image/mm/red.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">レディープレーヤー２</h2>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/th.PNG" data-img-alt="aaa">
@@ -123,18 +116,16 @@
                         <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/stw.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/stw.PNG" data-img-alt="「スター・ウォーズ」（Star Wars）は、ジョージ・ルーカスが製作し、1977年に公開された同名の映画から始まるアメリカのスペースオペラシリーズである[1]。映画だけでなく、アニメーション、小説、コミック、ゲームなど複数の媒体で展開される。">
                             <img class="imgone" src="image/mm/stw.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">スターウォーズ</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/sr.PNG" data-img-alt="aaa">
+                        <a href="#" class="open-modal" data-img-src="image/mm/sr.PNG" data-img-alt="アーケードゲームの世界で悪役キャラクターを演じてきたラルフが、ヒーローになる夢をかなえるために冒険に旅立つファンタジー・アドベンチャー映画。">
                             <img class="imgone" src="image/mm/sr.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">シュガー・ラッシュ</h2>
                     </div>
                 </div>
             </div>
@@ -147,59 +138,48 @@
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/hp.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/hp.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/mad.PNG" data-img-alt="荒廃した近未来のオーストラリアを舞台に、特殊警察「M. F. P.」に所属する警官マックス・ロカタンスキー（メル・ギブソン）が凶悪な暴走族に対峙（たいじ）する。 第1作の主軸になるのは、警察サイドと暴走族サイドの血で血を洗う復讐合戦">
+                            <img class="imgone" src="image/mm/mad.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">マッドマックス</h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/cha.PNG" data-img-alt="解説 ロアルド・ダールの名作児童小説「チョコレート工場の秘密」を、ティム・バートン監督＆ジョニー・デップのタッグで映画化。 不思議なチョコレート工場に招待された子どもたちの驚きの体験を、ブラックユーモアを散りばめながら独創的な世界観で描き出す">
+                            <img class="imgone" src="image/mm/cha.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">チャーリーとチョコレート工場</h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/ff.PNG" data-img-alt="aaa">
+                            <img class="imgone" src="image/mm/ff.PNG" alt="">
                         </a>
                         <h2 class="movie-name">aaa</h2>
                         <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/rais.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/rais.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/eit.PNG" data-img-alt="モデル志望の娘アレックスとの恋、トレーラーハウスに暮らす家族との生活、そして仲間たちと思い描く成功の夢。 ジミーは迷い、傷つきながらも、やがてラップのバトルステージに立つ……。 カリスマ的人気を誇るラップ・ミュージシャン、エミネムの半自伝的な青春物語。">
+                            <img class="imgone" src="image/mm/eit.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">エイトマイル</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/ab.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/ab.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/hk.PNG" data-img-alt="地球を守るスーパーヒーローたちが、侵入してきたエイリアンに捕まり、連れ去られてしまう。残されたヒーローの子供たちは、政府に保護されることになる。そして彼らは、両親と世界を救うべく、力を合わせて奮闘していく">
+                            <img class="imgone" src="image/mm/hk.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">ヒーローキッズ</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/sbs.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/sbs.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/spb.PNG"  data-img-alt="架空の海底都市「ビキニタウン」を舞台にスポンジ・ボブと仲間達が巻き起こす様々な出来事を描くギャグアニメ。">
+                            <img class="imgone" src="image/mm/spb.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/wy.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/wy.PNG" alt="">
-                        </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/ab.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/ab.PNG" alt="">
-                        </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
+                        <h2 class="movie-name">スポンジボブ</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="footer-div">
-            <p class="footer-p"><p>&copy; Yusuke Tamura self introduction</p></p>
-            
-        </div>
-    </footer>
-
+   
     <!-- Modal Structure -->
     <div id="customModal" class="modal">
         <div class="modal-content">
