--- a/soccer.html
+++ b/soccer.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>チェルシーFC - World's Greatest Football Club</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="css/soccer.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/heder.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-qpQfjy7fR8+7VTsw0gOLYwAGqjjT4UfGV8q4zIYYZcXXbQvIaxwbT4fgWt5x7dUAsNRBjWcszndPluM7Lw8twQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
