--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <nav class="main-nav">
                 <ul class="head-main-nav">
-                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt="サイトのロゴ"></a></h1>
                     <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="#hood">myhood</a></li>
                     <li class="nav-li"><a style="text-decoration: none;"  href="#career">career</a></li>
@@ -48,23 +48,23 @@
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt=""></a>
+                        <a href="artist.html"><img class="imgone" src="image/index/music.jpg" alt="好きなミュージック画像"></a>
                         <h2 class="hobby-h2">Music</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="food.html"><img class="imgone" src="image/index/fo.jpg" alt=""></a>
+                        <a href="food.html"><img class="imgone" src="image/index/fo.jpg" alt="好きなFOOD画像"></a>
                         <h2 class="hobby-h2">Food</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="movie.html"><img class="imgone" src="image/like/movie.jpg" alt=""></a>
+                        <a href="movie.html"><img class="imgone" src="image/like/movie.jpg" alt="好きな映画画像"></a>
                         <h2 class="hobby-h2">Movie</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="skatborde.html"><img class="imgone" src="image/index/board.jpg" alt=""></a>
+                        <a href="skatborde.html"><img class="imgone" src="image/index/board.jpg" alt="好きなスケボー画像"></a>
                         <h2 class="hobby-h2">Skateboard</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="soccer.html"><img class="imgone" src="image/index/ch.jpg" alt=""></a>
+                        <a href="soccer.html"><img class="imgone" src="image/index/ch.jpg" alt="好きなサッカーの画像"></a>
                         <h2 class="hobby-h2">Soccer</h2>
                     </div>
                 </div>
@@ -83,10 +83,10 @@
         <div class="about-div">
             <div class="swiper2">
                 <div class="hood-imgs swiper-wrapper">
-                    <div class="swiper-slide2"><img class="a" src="image/hood/sk.jpg" alt=""></div>
-                    <div class="swiper-slide2"><img src="image/hood/ba.jpg" alt=""></div>
-                    <div class="swiper-slide2"><img src="image/hood/la.jpg" alt=""></div>
-                    <div class="swiper-slide2"><img src="image/hood/sun.jpg" alt=""></div>
+                    <div class="swiper-slide2"><img class="a" src="image/hood/sk.jpg" alt="地元のスケータの画像"></div>
+                    <div class="swiper-slide2"><img src="image/hood/ba.jpg" alt="地元のバスケコートの画像"></div>
+                    <div class="swiper-slide2"><img src="image/hood/la.jpg" alt="地元の湖の画像"></div>
+                    <div class="swiper-slide2"><img src="image/hood/sun.jpg" alt="地元の夕焼けの画像"></div>
                 </div>
                 <div class="swiper-pagination swiper2-pagination"></div>
                 <div class="swiper-button-next swiper2-button-next"></div>
@@ -113,14 +113,14 @@
         <div class="index-sns-imgs ">  
             <div class="edg">
                 <div class="index-sns-imgs-row">
-                    <img class="sns-img index-sns-img" src="image/index/sns/instagram.png" alt="">
-                    <img class="sns-img index-sns-x" src="image/index/sns/x.png" alt="">
-                    <img class="sns-img index-sns-img" src="image/sns/be500.png" alt="">
+                    <img class="sns-img" src="image/index/sns/insta.jpg" alt="私のインスタアカウント">
+                    <img class="sns-img" src="image/index/sns/insta.jpg" alt="私のXアカウント">
+                    <img class="sns-img" src="image/index/sns/app.jpg" alt="私のビーリアルアカウント">
                 </div>
                 <div class="index-sns-imgs-row">
-                    <img class="sns-img index-sns-img" src="image/index/sns/applem.png" alt="">
-                    <img class="sns-img index-sns-img" src="image/index/sns/sound.png" alt="">
-                    <img class="sns-img index-sns-img" src="image/index/sns/m.png" alt="">
+                    <img class="sns-img" src="image/index/sns/app.jpg" alt="私のアップルミュージックアカウント">
+                    <img class="sns-img" src="image/index/sns/app.jpg" alt="私のサウンドクラウドの画像">
+                    <img class="sns-img" src="image/index/sns/insta.jpg" alt="私のメルカリのアカウント">
                 </div>
             </div>
             
