--- a/movie.html
+++ b/movie.html
@@ -113,7 +113,6 @@
                             <img class="imgone" src="image/mm/th.PNG" alt="">
                         </a>
                         <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/stw.PNG" data-img-alt="「スター・ウォーズ」（Star Wars）は、ジョージ・ルーカスが製作し、1977年に公開された同名の映画から始まるアメリカのスペースオペラシリーズである[1]。映画だけでなく、アニメーション、小説、コミック、ゲームなど複数の媒体で展開される。">
@@ -132,17 +131,58 @@
         </div>
     </div>
 
+   
     <div id="like" class="like">
         <div class="about">
-            <h2 class="movie-h2">その他</h2>
+            <h2 class="movie-h2">SUPPER</h2>
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/mad.PNG" data-img-alt="荒廃した近未来のオーストラリアを舞台に、特殊警察「M. F. P.」に所属する警官マックス・ロカタンスキー（メル・ギブソン）が凶悪な暴走族に対峙（たいじ）する。 第1作の主軸になるのは、警察サイドと暴走族サイドの血で血を洗う復讐合戦">
-                            <img class="imgone" src="image/mm/mad.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/ws.PNG" data-img-alt="解説 ロアルド・ダールの名作児童小説「チョコレート工場の秘密」を、ティム・バートン監督＆ジョニー・デップのタッグで映画化。 不思議なチョコレート工場に招待された子どもたちの驚きの体験を、ブラックユーモアを散りばめながら独創的な世界観で描き出す">
+                            <img class="imgone" src="image/mm/ws.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">マッドマックス</h2>
+                        <h2 class="movie-name">ワイルドスピード</h2>
                     </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/hp.PNG" data-img-alt="aaa">
+                            <img class="imgone" src="image/mm/hp.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">ハリーポッター</h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/eit.PNG" data-img-alt="モデル志望の娘アレックスとの恋、トレーラーハウスに暮らす家族との生活、そして仲間たちと思い描く成功の夢。 ジミーは迷い、傷つきながらも、やがてラップのバトルステージに立つ……。 カリスマ的人気を誇るラップ・ミュージシャン、エミネムの半自伝的な青春物語。">
+                            <img class="imgone" src="image/mm/eit.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">エイトマイル</h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/boh.PNG" data-img-alt="地球を守るスーパーヒーローたちが、侵入してきたエイリアンに捕まり、連れ去られてしまう。残されたヒーローの子供たちは、政府に保護されることになる。そして彼らは、両親と世界を救うべく、力を合わせて奮闘していく">
+                            <img class="imgone" src="image/mm/boh.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">ボヘミアンラプソディー</h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/ss.PNG" data-img-alt="荒廃した近未来のオーストラリアを舞台に、特殊警察「M. F. P.」に所属する警官マックス・ロカタンスキー（メル・ギブソン）が凶悪な暴走族に対峙（たいじ）する。 第1作の主軸になるのは、警察サイドと暴走族サイドの血で血を洗う復讐合戦">
+                            <img class="imgone" src="image/mm/ss.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">スーサイドスクワット</h2>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="open-modal" data-img-src="image/mm/rais.PNG" data-img-alt="荒廃した近未来のオーストラリアを舞台に、特殊警察「M. F. P.」に所属する警官マックス・ロカタンスキー（メル・ギブソン）が凶悪な暴走族に対峙（たいじ）する。 第1作の主軸になるのは、警察サイドと暴走族サイドの血で血を洗う復讐合戦">
+                            <img class="imgone" src="image/mm/rais.PNG" alt="">
+                        </a>
+                        <h2 class="movie-name">ライズ</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="like" class="like">
+        <div class="about">
+            <h2 class="movie-h2">kids</h2>
+            <div class="swiper swiper1">
+                <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/cha.PNG" data-img-alt="解説 ロアルド・ダールの名作児童小説「チョコレート工場の秘密」を、ティム・バートン監督＆ジョニー・デップのタッグで映画化。 不思議なチョコレート工場に招待された子どもたちの驚きの体験を、ブラックユーモアを散りばめながら独創的な世界観で描き出す">
                             <img class="imgone" src="image/mm/cha.PNG" alt="">
@@ -150,17 +190,10 @@
                         <h2 class="movie-name">チャーリーとチョコレート工場</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/ff.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/ff.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/bk.PNG" data-img-alt="aaa">
+                            <img class="imgone" src="image/mm/bk.PNG" alt="">
                         </a>
-                        <h2 class="movie-name">aaa</h2>
-                        <p class="movie-di">aaaaaaaaaaaaaaaa <br>aaaaaaaaaaa</p>
-                    </div>
-                    <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/eit.PNG" data-img-alt="モデル志望の娘アレックスとの恋、トレーラーハウスに暮らす家族との生活、そして仲間たちと思い描く成功の夢。 ジミーは迷い、傷つきながらも、やがてラップのバトルステージに立つ……。 カリスマ的人気を誇るラップ・ミュージシャン、エミネムの半自伝的な青春物語。">
-                            <img class="imgone" src="image/mm/eit.PNG" alt="">
-                        </a>
-                        <h2 class="movie-name">エイトマイル</h2>
+                        <h2 class="movie-name">ベストキッド</h2>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/hk.PNG" data-img-alt="地球を守るスーパーヒーローたちが、侵入してきたエイリアンに捕まり、連れ去られてしまう。残されたヒーローの子供たちは、政府に保護されることになる。そして彼らは、両親と世界を救うべく、力を合わせて奮闘していく">
@@ -178,6 +211,8 @@
             </div>
         </div>
     </div>
+
+    
 
    
     <!-- Modal Structure -->
