--- a/artist.html
+++ b/artist.html
@@ -396,7 +396,7 @@
             <div class="swiper-slide">
                 <h1 class="us-h1">UKartist</h1>  
                 <img class="uk-icon-img" src="image/image/—Pngtree—united kingdom flag_8365182.png" alt="イギリス国旗">
-                <div class="imgs-row img-row1">
+                <div class="uk-ar imgs-row img-row1">
                     <div >
                         <h2>nino uptown</h2>
                         <ul>
