--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
         <div class="index-sns-imgs ">  
             <div class="edg">
                 <div class="index-sns-imgs-row">
-                    <img class="sns-img" src="image/index/sns/insta.jpg" alt="私のインスタアカウント">
-                    <img class="sns-img" src="image/index/sns/insta.jpg" alt="私のXアカウント">
-                    <img class="sns-img" src="image/index/sns/app.jpg" alt="私のビーリアルアカウント">
+                    <img class="sns-img" src="image/sns/in.jpg" alt="私のインスタアカウント">
+                    <img class="sns-img" src="image/sns/x.jpg" alt="私のXアカウント">
+                    <img class="sns-img" src="image/sns/be.jpg" alt="私のビーリアルアカウント">
                 </div>
                 <div class="index-sns-imgs-row">
-                    <img class="sns-img" src="image/index/sns/app.jpg" alt="私のアップルミュージックアカウント">
-                    <img class="sns-img" src="image/index/sns/app.jpg" alt="私のサウンドクラウドの画像">
-                    <img class="sns-img" src="image/index/sns/insta.jpg" alt="私のメルカリのアカウント">
+                    <img class="sns-img" src="image/sns/mu.jpg" alt="私のアップルミュージックアカウント">
+                    <img class="sns-img" src="image/sns/so.jpg" alt="私のサウンドクラウドの画像">
+                    <img class="sns-img" src="image/sns/m.jpg" alt="私のメルカリのアカウント">
                 </div>
             </div>
             
